Added projection view and added the start to some walls

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <div class="row">
     <div class="col-md-5">
        
-        <canvas id="gl-canvas" width="512" height="512">
+        <canvas id="gl-canvas" width="512" height="512" style="border: 1px solid black;">
         Oops ... your browser doesn't support the HTML5 canvas element
         </canvas>
     </div>
