--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
         </canvas>
     </div>
 </div>
-<img id = "texImage" src = "bricks256.png" hidden></img>
+<img id = "bricks" src = "bricks256.png" hidden></img>
+<img id = "ground" src = "ground1024.jpg" hidden></img>
 </body>
 </html>
 
