Got top down view working

--- a/index.html
+++ b/index.html
@@ -95,6 +95,10 @@
     </div>
 <div class="row">
     <div class="col-md-5">
+        WSAD to move
+        <br>Use shift key to view maze top down</br>
+    </div>
+    <div class="col-md-5">
        
         <canvas id="gl-canvas" width="512" height="512" style="border: 1px solid black;">
         Oops ... your browser doesn't support the HTML5 canvas element
