Added timer element

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 <body>
     <h1>Maze</h1>
     <div class="jumbotron" id="jumbotron">
-        <p class="lead">Save current state     
+        <p class="lead">    
             <h1>MAZE!!!!</h1>
         </p>
     </div>
@@ -101,6 +101,14 @@
         Use the WSAD keys to move
         <br>Use the arrow keys to look around</br>
         <br>Use shift key to view maze top down</br>
+        <br>
+            <section id="stopWatch"> 
+                <p id="timer"> Time : 00:00:00 </p> 
+                <button id="start"> Start </button> 
+                <button id="stop"> Stop </button> 
+                <p id="fulltime"> </p> 
+            </section> 
+        <br>
     </div>
     <div class="col-md-5">
        
@@ -113,4 +121,23 @@
 <img id = "ground" src = "ground1024.jpg" hidden></img>
 </body>
 </html>
+
+
+<!--
+<html lang="en"> 
+    <head> 
+        <title> JavaScript Stop Watch </title> 
+        <style text="text/css"> </style> 
+        <script type="text/javascript"> </script> 
+    </head> 
+    <body> 
+        <section id="stopWatch"> 
+            <p id="timer"> Time : 00:00:00 </p> 
+            <button id="start"> Start </button> 
+            <button id="stop"> Stop </button> 
+            <p id="fulltime"> </p> 
+        </section> 
+    </body> 
+</html> 
+-->
 
